kubernetes/services/ticket/bridge.pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: ticket-bridge
  namespace: hpc-services
  labels:
    app: ticket-bridge
    framework: flask
  annotations:
    a8r.io/description: "Batch service for creating tickets out of mailbox events"
    a8r.io/owner: renatodamas
spec:
  containers:
    - name: ticket-job
      image: docker.io/rena2damas/ticket-manager:latest
      imagePullPolicy: Always
      command: [ "flask", "o365", "handle-incoming-email" ]
      resources:
        limits:
          cpu: 100m
          memory: 100Mi
        requests:
          cpu: 100m
          memory: 100Mi
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
  restartPolicy: OnFailure
