kubernetes/services/ticket/api.ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ticket-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api/ticket
            backend:
              serviceName: ticket-api
              servicePort: 80
